MODUSERS-547: fixed sonar issues